# ts7100z-lvgl-ui-demo

./: CMakeLists.txt  README.md  TS-7100-Z-Label-20220324.c  gpio.c  gpio.h  gpiolib1.c  gpiolib1.h  lv_conf.h  lv_drv_conf.h  main.c  main.h  meter.c  meter.h
